<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorTextLite"
        android:gravity="center_horizontal"
        android:text="@string/massage_exit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:padding="20dp"
            android:text="@string/button_yes"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorTextLite" />

        <Button
            android:id="@+id/exit_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:padding="20dp"
            android:text="@string/button_no"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorTextLite" />
    </LinearLayout>

    <Button
        android:id="@+id/exit_logout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:padding="20dp"
        android:text="@string/button_logout"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorTextLite" />
</LinearLayout>